# poc-test

./: .gitignore  .pre-commit-config.yaml  README.md  custom_linting.xml  docs.md  eslint.config.cjs  precommit.md
.github/workflows/: codeql.yml  test.yml
argo-workflows/: debug-pod.yaml  extract-hl7-log.yaml
docs/: requirements.txt
docs/source/: conf.py  index.md  usage.md
explorer/: .dockerignore  .eslintrc.json  Dockerfile  LICENSE  README.md  instrumentation.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
explorer-v2/: .eslintrc.json  Dockerfile  README.md  docker-compose.yaml  instrumentation.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
explorer-v2/ai/: index.ts  prompt.ts
explorer-v2/app/: globals.css  layout.tsx
explorer-v2/components/: app-sidebar.tsx  auth-form.tsx  block-stream-handler.tsx  block.tsx  icons.tsx  model-selector.tsx  overview.tsx  search-form.tsx  search-header.tsx  search.tsx  sidebar-history.tsx  sidebar-toggle.tsx  sidebar-user-nav.tsx  theme-provider.tsx  use-block-stream.tsx
explorer-v2/context/: use-chat-context.ts
explorer-v2/db/: queries.ts  schema.ts
explorer-v2/lib/: types.ts  utils.ts
explorer/app/: globals.css  layout.tsx  page.tsx
helm/: README.md
hl7-extractor/: .gitignore  LICENSE  README.md  pyproject.toml
hl7-extractor/src/hl7extractor/: cli.py  hl7deltalake.py  hl7extractor.py
superset-plugin-chart-vector-search/: README.md  babel.config.js  package-lock.json  package.json
tests/: .gitignore  build.gradle  requirements.txt  seed.py  settings.gradle
(+161 files in other folders)
