[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hl7extractor"
version = "0.1.0"
description = "Extract Radiology Reports from HL7 Messages"
readme = "README.md"
authors = [
    {name = "John Flavin", email = "jflavin@wustl.edu"},
]
maintainers = [
    {name = "John Flavin", email = "jflavin@wustl.edu"},
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
requires-python = ">= 3.8"  # Lower limit is a guess
dependencies = [
    "hl7",
    "pydantic",
]

[project.scripts]
hl7extractor = "hl7extractor.cli:main"
